# B2ShiftAI

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
AIAgentic/: B2Shift Agentic AI Campaign.json  B2Shift Agentic AI Chat.json  B2Shift_Agentic_AI_Arquitetura_Documentacao.docx  B2Shift_GENBI_PBI_Documentacao.docx  README
AIAgentic/b2shift-agentic-adk/: .env.example  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  demo.py  pyproject.toml  setup.py
AIAgentic/b2shift-agentic-adk/b2shift_cluster/: __init__.py  agent.py  prompts.py  tools.py
AIAgentic/b2shift-agentic-adk/b2shift_cluster/models/: __init__.py
AIAgentic/b2shift-agentic-adk/b2shift_cluster/sub_agents/cluster/: __init__.py
AIAgentic/b2shift-agentic-adk/b2shift_cluster/sub_agents/data/: __init__.py
AIAgentic/b2shift-agentic-adk/b2shift_cluster/sub_agents/decision/: __init__.py
AIAgentic/sub_agents/: __init__.py
AICluster/: README  b2shift_clustering.ipynb  b2shift_etl_novo.ipynb  b2shift_etl_refined_agentic (1).ipynb
GCP-IaaC/: 3.EXECUÇÃO-CLOUD SOLUTIONS-3Sprint-B2BShift-Prints&Video.docx  4.EVIDENCIARECURSOS-CLOUD SOLUTIONS-3Sprint-B2BShift-Prints&Video - Copy.docx  README
GCP-IaaC/GCP-IaaC\gcp-b2bshift-iac/: .gitignore  ARQUITETURA-DADOS.md  INSTRUCOES-EXECUCAO.md  PRE-CONFIGURACOES.md  README.md  bigquery.tf  composer.tf  dataflow.tf  dataplex.tf  dataproc.tf  deploy.sh  destroy.ps1  outputs.tf  provider.tf  setup.ps1  storage.tf  terraform.tfstate  terraform.tfstate.backup.20250831-220709  terraform.tfvars  terraform.tfvars.example  validate.ps1  variables.tf  (+1 more)
